2009-09-30  Miloslav Trmač  <mitr@redhat.com>

	* lib/libvolume_key.h (LIBVK_PACKET_FORMAT_ASYMMETRIC_WRAP_SECRET_ONLY)
	(LIBVK_PACKET_FORMAT_SYMMETRIC_WRAP_SECRET_ONLY)
	(libvk_volume_create_packet_wrap_secret_symmetric)
	* lib/libvolume_key.c (libvk_volume_create_packet_asymmetric)
	(libvk_volume_create_packet_asymmetric_with_format)
	(libvk_volume_create_packet_wrap_secret_symmetric)
	(libvk_packet_open)
	* python/volume_key.i (PACKET_FORMAT_ASYMMETRIC_WRAP_SECRET_ONLY)
	(PACKET_FORMAT_SYMMETRIC_WRAP_SECRET_ONLY)
	(libvk_volume_create_packet_wrap_secret_symmetric)
	(Volume::create_packet_assymetric_from_cert_data)
	(Volume::create_packet_asymmetric_from_cert_data)
	* src/volume_key.c (do_dump)
	* tests/packet_roundtrips.c (test): s/wrap_key/wrap_secret/g.

	* src/volume_key.c (write_packet, do_dump): s/assymetric/asymmetric/g
	(do_dump): Add LIBVK_PACKET_FORMAT_ASYMMETRIC_WRAP_KEY_ONLY and
	LIBVK_PACKET_FORMAT_SYMMETRIC_WRAP_KEY_ONLY support.

	* python/volume_key.i (PACKET_FORMAT_ASYMMETRIC)
	(PACKET_FORMAT_ASYMMETRIC_WRAP_KEY_ONLY)
	(PACKET_FORMAT_SYMMETRIC_WRAP_KEY_ONLY): New definitions.
	(libvk_ui_set_sym_key_cb, libvk_volume_create_packet_asymmetric)
	(libvk_volume_create_packet_asymmetric_with_format)
	(libvk_volume_create_packet_wrap_key_symmetric): New %ignore directives.
	(%typemap(check) enum libvk_packet_format): New typemap.
	(libvk_volume_create_packet_asymmetric_from_cert_data): Move to top
	level, add "format" parameter.
	(Volume::create_packet_asymmetric): New declaration.
	(Volume::create_packet_assymetric_from_cert_data): New method.
	(Volume::create_packet_asymmetric_from_cert_data): New declaration, add
	default format value.

	* tests/packet_roundtrips.sh: New test.
	* tests/packet_roundtrips.c
	* tests/packet_roundtrips_luks_passphrase
	* tests/packet_roundtrips_luks_symmetric: New files.
	* tests/crypto_roundtrips.sh
	* tests/crypto_roundtrips.c
	* tests/kmip_roundtrip.c
	* tests/kmip_roundtrip_luks_passphrase